--- a/.github/actions/notify_metadata_changes/action.yaml
+++ b/.github/actions/notify_metadata_changes/action.yaml
@@ -5,7 +5,7 @@ runs:
   steps:
     - name: Get changed files
       id: changed-files
-      uses: tj-actions/changed-files@17.2
+      uses: tj-actions/changed-files@v17.2
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
