--- a/.github/actions/notify_metadata_changes/action.yaml
+++ b/.github/actions/notify_metadata_changes/action.yaml
@@ -6,6 +6,8 @@ runs:
     - name: Get changed files
       id: changed-files
       uses: tj-actions/changed-files@v17.2
+      with:
+        since_last_remote_commit: true
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
