--- a/.github/actions/notify_metadata_changes/action.yaml
+++ b/.github/actions/notify_metadata_changes/action.yaml
@@ -19,5 +19,5 @@ runs:
       shell: bash
     - name: Send Message to RabbitMQ
       run: |
-        python .github/actions/scripts/send.py "${{ steps.changed-files.outputs.all_changed_files }}"
+        python .github/actions/scripts/send.py "${{ steps.changed-files.outputs.all_changed_files }}" "${{ format('https://github.com/{}/commit/{}', github.repository, github.sha) }}"
       shell: bash
