--- a/data_product1/data_product.yaml
+++ b/data_product1/data_product.yaml
@@ -13,12 +13,12 @@ envs:
       applications:
         - Spark
   prod:
-    data_classification: L2
+    data_classification: L1
     contains_pii: false
     amplitude: false
     emr:
-      master_instance_type: m5.medium
-      core_instance_type: m5.medium
+      master_instance_type: m5.xlarge
+      core_instance_type: m5.xlarge
       core_instance_count: 5
       release_label: emr-4.6.0
       applications:
