--- a/data_product2/data_product.yaml
+++ b/data_product2/data_product.yaml
@@ -2,6 +2,6 @@ name: DataPlatformProduct2
 status: dev
 envs:
   dev:
-    data_classification: L2
+    data_classification: L3
     contains_pii: true
-    amplitude: true
+    amplitude: false
